Add pyutils module

--- a/electricity_FI.ipynb
+++ b/electricity_FI.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "3a19f48e-c417-46be-855d-711467aa8a39",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "from typing import Any\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
     "import numpy as np\n",
@@ -16,35 +17,26 @@
     "from zoneinfo import ZoneInfo\n",
     "from datetime import timezone, datetime\n",
     "import aiohttp\n",
-    "from .secrets import FG_api_key\n",
-    "\n",
-    "# FinGrid\n",
-    "\n",
-    "# x-api-key\n",
-    "\n",
-    "FG_URL_base : str = 'https://api.fingrid.fi/'\n",
-    "\n",
-    "# data sources\n",
-    "FGid_elec_consumption_FI : int = 124"
+    "from config import FG_api_key\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "181aca1c",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def utc_str(dt: datetime) -> str:\n",
-    "    if dt.timetz != timezone.utc:\n",
-    "        dt = dt.astimezone(timezone.utc)\n",
-    "    return dt.replace(tzinfo=None).isoformat() + 'Z'\n",
-    "\n",
-    "def round_hour(dt : datetime) -> datetime:\n",
-    "    return dt.replace(minute=0, second=0, microsecond=0)\n",
-    "\n",
-    "async def FG_get_data(var_id: int, start: datetime, end: datetime) -> list[dict[str, int | float | str]]"
-   ]
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (3003396494.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[21], line 10\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
